helm/rabbitmq/service-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: rabbitmq
  ports:
    - protocol: TCP
      port: 15672
      targetPort: 15672
      nodePort: 32010
